[package]
name = "robloxdownloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true 
opt-level = 3
lto = true
codegen-units = 1


[dependencies]
color-eyre = "0.6.2"
futures-util = "0.3.28"
indicatif = "0.17.7"
lazy_static = "1.4.0"
md5 = "0.7.0"
reqwest = { version = "0.11.22", features = ["stream"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.4.0"
zip = "0.6.6"
zip-extract = "0.1.2"
